# runtime-py

./: README.md  dependencies.txt  pyproject.toml  setup.py
.github/workflows/: package.yaml  package.yml  track-wasmtime.yaml  track-wasmtime.yml  track_wasmtime.yaml
tests/: .gitignore  expected.txt  expected1.txt  expected3.txt  expected4.txt  expected5.txt  expected7.txt  run.sh
tests/fixtures/dir1/dir2/: fixdir2.txt
tests/fixtures/dir1/dir2/workdir/dir3/: fixdir3.txt
tests/fixtures/test1/dir1/: fixdir1.txt
tests/fixtures/test1/dir1/dir2/workdir/: fixwork.txt
tests/fixtures/test2/share/: data.txt
tests/fixtures/test3/workdir/: fixwork.txt
tests/fixtures/test6/tmp/: yowasp_tmp_test_file.txt
tests/fixtures/test7/: fixwork.txt
tests/yowasp-runtime-test/: .gitignore  build.sh  cat.c  pyproject.toml
tests/yowasp-runtime-test/yowasp_runtime_test/: __init__.py  cat.wasm
tests/yowasp-runtime-test/yowasp_runtime_test/share/: data.txt
yowasp_runtime/: __init__.py
