[build-system]
requires = ["setuptools~=67.0", "setuptools_scm~=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

name = "yowasp-runtime"
description = "Common runtime for YoWASP packages"
readme = "README.md"
authors = [{name = "Catherine", email = "whitequark@whitequark.org"}]
license = {file = "LICENSE.txt"}
classifiers = [
	"License :: OSI Approved :: ISC License (ISCL)"
]

requires-python = "~=3.8"

[project.urls]
"Homepage" = "https://yowasp.org/"
"Source Code" = "https://github.com/YoWASP/runtime-js"
"Bug Tracker" = "https://github.com/YoWASP/runtime-js/issues"

[tool.setuptools.dynamic]
dependencies = {file = "dependencies.txt"}
